Se agrego fhymeleaf fragmets: header, menu, breadcrumb. Se agregaron vistas de thymeleaf home, users/create. Se agrego controlador UserController. Se creo archivo de configuracion para leer nombre de aplicacion desde application.propertoes

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -3,3 +3,10 @@ ui.home.window.title=Inicio
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
 ui.menu.navbar.users.create=CREar usuario
+
+ui.actions.logout=Salir
+
+ui.users.create.panel.heading=Crear usuario
+
+ui.breadcrumb.users=Usuarios
+ui.breadcrumb.users.create=Crear usuario
