--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,4 +1,5 @@
 ui.home.window.title=Inicio
+ui.users.create.window.title=Crear usuario
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -10,3 +11,17 @@ ui.users.create.panel.heading=Crear usuario
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
+
+ui.users.create.form.name=Nombre
+ui.users.create.form.name.placeholder=Nombre
+ui.users.create.form.lastName=Apellido
+ui.users.create.form.lastName.placeholder=Apellido
+ui.users.create.form.birthday=Fecha Nac.
+ui.users.create.form.username=Usuario
+ui.users.create.form.username.placeholder=Usuario de inicio de sesión
+ui.users.create.form.password=Contraseña
+ui.users.create.form.password.placeholder=Contraseña de acceso
+ui.users.create.form.email=Email
+ui.users.create.form.email.placeholder=correo electronico
+
+ui.common.button.save=Guardar
