Se modifico test para cargar roles en la creacion del usaurio. Se prepara vista para mostar catalogo de roles a asignar al usuario

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -23,5 +23,6 @@ ui.users.create.form.password=Contraseña
 ui.users.create.form.password.placeholder=Contraseña de acceso
 ui.users.create.form.email=Email
 ui.users.create.form.email.placeholder=correo electronico
+ui.users.create.form.roles=Roles
 
 ui.common.button.save=Guardar
