--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -26,3 +26,5 @@ ui.users.create.form.email.placeholder=correo electronico
 ui.users.create.form.roles=Roles
 
 ui.common.button.save=Guardar
+
+validation.user.roles.empty=Dbbe seleccionar al menos un rol
