Se agrego metodo inex en UserController para mostar la vista users/index. Se modifico users/index para que muestre una tabla con la lista de usuarios (queda pendiente paginacion). Se modiifco menu para agregar link para listado de usuarios.

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,13 +1,16 @@
 ui.home.window.title=Inicio
 ui.users.create.window.title=Crear usuario
+ui.users.index.window.title=Usuarios
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
 ui.menu.navbar.users.create=CREar usuario
+ui.menu.navbar.users.index=Listar usuarios
 
 ui.actions.logout=Salir
 
 ui.users.create.panel.heading=Crear usuario
+ui.users.index.panel.heading=Usuarios
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -28,3 +31,8 @@ ui.users.create.form.roles=Roles
 ui.common.button.save=Guardar
 
 validation.user.roles.empty=Dbbe seleccionar al menos un rol
+
+ui.users.index.table.name=Nombre
+ui.users.index.table.lastName=Apellido
+ui.users.index.table.username=Uusuario
+ui.users.index.table.role=Role
