Se modifico vistas users/create y users/index junto con el controlador UseRController  para mejorar la experiencia del usuario al fallar la validacion del formulario creacion (recuerda los roles seleccionados) Se agrego boton editar en users/index-

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -4,13 +4,14 @@ ui.users.index.window.title=Usuarios
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
-ui.menu.navbar.users.create=CREar usuario
+ui.menu.navbar.users.create=Crear usuario
 ui.menu.navbar.users.index=Listar usuarios
 
 ui.actions.logout=Salir
 
 ui.users.create.panel.heading=Crear usuario
 ui.users.index.panel.heading=Usuarios
+ui.users.edit.panel.heading=Editar usuario
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -26,9 +27,13 @@ ui.users.create.form.password=Contraseña
 ui.users.create.form.password.placeholder=Contraseña de acceso
 ui.users.create.form.email=Email
 ui.users.create.form.email.placeholder=correo electronico
-ui.users.create.form.roles=Roles
+ui.users.create.form.roles=Roles 
+ui.users.create.form.role=Rol
+ui.users.create.form.userRoles=Roles del usuario
 
 ui.common.button.save=Guardar
+ui.common.table.edit=Editar
+ui.common.table.action=Accion
 
 validation.user.roles.empty=Dbbe seleccionar al menos un rol
 
