Se agrega funcionalidad para editar el usuario

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,6 +1,7 @@
 ui.home.window.title=Inicio
 ui.users.create.window.title=Crear usuario
 ui.users.index.window.title=Usuarios
+ui.users.edit.window.title=Editar usurio
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
