Se agrego funcionalidad para crear ciclos escolares. Cambio incluye: Repositorio y capa de Servicio CycleRepository y CycleService con su respectiva implementacion. Test para capa de datos y servicio en el metodo addCycle. Controlador y vista asociada. Cambio en el menu para agregar acceso a la pagina de crear ciclos. Se modifica messages_es para agregar textos en espaniol

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -2,20 +2,26 @@ ui.home.window.title=Inicio
 ui.users.create.window.title=Crear usuario
 ui.users.index.window.title=Usuarios
 ui.users.edit.window.title=Editar usurio
+ui.cycles.create.window.title=Crear Ciclo
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
 ui.menu.navbar.users.create=Crear usuario
 ui.menu.navbar.users.index=Listar usuarios
+ui.menu.navbar.cycles=Ciclos escolares
+ui.menu.navbar.cycles.create=Crear Ciclo
 
 ui.actions.logout=Salir
 
 ui.users.create.panel.heading=Crear usuario
 ui.users.index.panel.heading=Usuarios
 ui.users.edit.panel.heading=Editar usuario
+ui.cycles.create.panel.heading=Crear Ciclo Escolar
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
+ui.breadcrumb.cycles=Ciclos escolares
+ui.breadcrumb.cycles.create=Crear Ciclo
 
 ui.users.create.form.name=Nombre
 ui.users.create.form.name.placeholder=Nombre
@@ -32,11 +38,12 @@ ui.users.create.form.roles=Roles
 ui.users.create.form.role=Rol
 ui.users.create.form.userRoles=Roles del usuario
 
+ui.cycles.create.form.name=Nombre del Ciclo
+ui.cycles.create.form.name.placeholder=Ejemplo: Ciclo 20-21
+
 ui.common.button.save=Guardar
 ui.common.table.edit=Editar
 ui.common.table.action=Accion
-
-validation.user.roles.empty=Dbbe seleccionar al menos un rol
 
 ui.users.index.table.name=Nombre
 ui.users.index.table.lastName=Apellido
