Se agrega funcionalidad para listar ciclos escolares. Se agrego metodo para listar ciclos escolares paginados en capa de servicio. Se agrego test de integracion para la capa de servicios en el nuevo metodo listar ciclos paginados. Se agrega controlador, vistas y mensajes de lenguaje espaniol.

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -3,6 +3,7 @@ ui.users.create.window.title=Crear usuario
 ui.users.index.window.title=Usuarios
 ui.users.edit.window.title=Editar usurio
 ui.cycles.create.window.title=Crear Ciclo
+ui.cycles.index.window.title=Ciclos Escolares
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -10,6 +11,7 @@ ui.menu.navbar.users.create=Crear usuario
 ui.menu.navbar.users.index=Listar usuarios
 ui.menu.navbar.cycles=Ciclos escolares
 ui.menu.navbar.cycles.create=Crear Ciclo
+ui.menu.navbar.cycles.index=Listar Ciclos
 
 ui.actions.logout=Salir
 
@@ -17,6 +19,7 @@ ui.users.create.panel.heading=Crear usuario
 ui.users.index.panel.heading=Usuarios
 ui.users.edit.panel.heading=Editar usuario
 ui.cycles.create.panel.heading=Crear Ciclo Escolar
+ui.cycles.index.panel.heading=Ciclos Escolares
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -49,3 +52,6 @@ ui.users.index.table.name=Nombre
 ui.users.index.table.lastName=Apellido
 ui.users.index.table.username=Uusuario
 ui.users.index.table.role=Role
+
+ui.cycles.index.table.cycle=Ciclo
+ui.cycles.index.table.createdAt=Fecha creación
