Se agrega funcionalidad para editar cilos escolares

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -4,6 +4,7 @@ ui.users.index.window.title=Usuarios
 ui.users.edit.window.title=Editar usurio
 ui.cycles.create.window.title=Crear Ciclo
 ui.cycles.index.window.title=Ciclos Escolares
+ui.cycles.edit.window.title=Editar Ciclo
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -20,11 +21,13 @@ ui.users.index.panel.heading=Usuarios
 ui.users.edit.panel.heading=Editar usuario
 ui.cycles.create.panel.heading=Crear Ciclo Escolar
 ui.cycles.index.panel.heading=Ciclos Escolares
+ui.cycles.edit.panel.heading=Editar Ciclo
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
 ui.breadcrumb.cycles=Ciclos escolares
 ui.breadcrumb.cycles.create=Crear Ciclo
+ui.breadcrumb.cycles.edit=Editar Ciclo
 
 ui.users.create.form.name=Nombre
 ui.users.create.form.name.placeholder=Nombre
