Se agrego funcionalidad para registar cursos a ciclos escolares

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -8,6 +8,7 @@ ui.cycles.edit.window.title=Editar Ciclo
 ui.classrooms.index.window.title=Salones de clase
 ui.classrooms.create.window.title=Crear salon de clase
 ui.classrooms.edit.window.title=Editar salon de clase
+ui.courses.index.window.title=Cursos
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -19,6 +20,8 @@ ui.menu.navbar.cycles.index=Listar Ciclos
 ui.menu.navbar.classrooms=Salones de clase
 ui.menu.navbar.classrooms.index=Listar salones
 ui.menu.navbar.classrooms.create=Crear Salon
+ui.menu.navbar.courses=Cursos
+ui.menu.navbar.courses.index=Listar cursos
 
 ui.actions.logout=Salir
 
@@ -31,6 +34,8 @@ ui.cycles.edit.panel.heading=Editar Ciclo
 ui.classrooms.index.panel.heading=Salones de clase
 ui.classrooms.create.panel.heading=Crear salón de clase
 ui.classrooms.edit.panel.heading=Editar salón de clase
+ui.courses.index.panel.heading=Lista de cursos
+ui.courses.create.panel.heading=Crear Curso
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -39,6 +44,8 @@ ui.breadcrumb.cycles.create=Crear Ciclo
 ui.breadcrumb.cycles.edit=Editar Ciclo
 ui.breadcrumb.classrooms=Salones de clase
 ui.breadcrumb.classrooms.edit=Editar Salón
+ui.breadcrumb.courses=Lista de cursos
+ui.breadcrumb.courses.create=Crear Curso
 
 ui.users.create.form.name=Nombre
 ui.users.create.form.name.placeholder=Nombre
@@ -63,16 +70,32 @@ ui.classrooms.create.form.name.placeholder=Ejemplo: Edificio E, salón 22
 ui.classrooms.create.form.description=Descripción
 ui.classrooms.create.form.description.placeholder=Descripción o comenbtarios
 
+ui.courses.index.form.cycle=Ciclo escolar
+ui.courses.index.button.createCourse=Crear curso
+
+ui.courses.create.form.name=Nombde
+ui.courses.create.form.cycle=Ciclo
+ui.courses.create.form.name.placeholder=Ej: Segundo grado A
+ui.courses.create.form.manager=Encargado
+ui.courses.create.form.classroom=Salon de clases
+
 ui.common.button.save=Guardar
 ui.common.table.edit=Editar
 ui.common.table.action=Accion
 ui.common.table.createdAt=Creado en
 ui.common.table.updatedAt=Actualizado en
+ui.common.button.search=Buscar
+ui.common.form.select=-- Seleccione un valor --
 
 ui.users.index.table.name=Nombre
 ui.users.index.table.lastName=Apellido
 ui.users.index.table.username=Uusuario
 ui.users.index.table.role=Role
+
+ui.courses.index.table.name=Curso
+ui.courses.index.table.manager=Manager
+ui.courses.index.table.cycle=Ciclo
+ui.courses.index.table.classroom=Salón
 
 ui.cycles.index.table.cycle=Ciclo
 ui.cycles.index.table.createdAt=Fecha creación
