Nueva funcionalidad para editar cusos

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -9,6 +9,7 @@ ui.classrooms.index.window.title=Salones de clase
 ui.classrooms.create.window.title=Crear salon de clase
 ui.classrooms.edit.window.title=Editar salon de clase
 ui.courses.index.window.title=Cursos
+ui.courses.edit.window.title=Editar Curso
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -36,6 +37,7 @@ ui.classrooms.create.panel.heading=Crear salón de clase
 ui.classrooms.edit.panel.heading=Editar salón de clase
 ui.courses.index.panel.heading=Lista de cursos
 ui.courses.create.panel.heading=Crear Curso
+ui.courses.edit.panel.heading=Editar Curso
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -86,6 +88,7 @@ ui.common.table.createdAt=Creado en
 ui.common.table.updatedAt=Actualizado en
 ui.common.button.search=Buscar
 ui.common.form.select=-- Seleccione un valor --
+ui.common.actions.edit=Editar
 
 ui.users.index.table.name=Nombre
 ui.users.index.table.lastName=Apellido
