--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -10,6 +10,7 @@ ui.classrooms.create.window.title=Crear salon de clase
 ui.classrooms.edit.window.title=Editar salon de clase
 ui.courses.index.window.title=Cursos
 ui.courses.edit.window.title=Editar Curso
+ui.subjects.create.window.title=Crear Materia
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -38,6 +39,7 @@ ui.classrooms.edit.panel.heading=Editar salón de clase
 ui.courses.index.panel.heading=Lista de cursos
 ui.courses.create.panel.heading=Crear Curso
 ui.courses.edit.panel.heading=Editar Curso
+ui.subjects.create.panel.heading=Agregar materia
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -48,6 +50,7 @@ ui.breadcrumb.classrooms=Salones de clase
 ui.breadcrumb.classrooms.edit=Editar Salón
 ui.breadcrumb.courses=Lista de cursos
 ui.breadcrumb.courses.create=Crear Curso
+ui.breadcrumb.subjects.create=Agregar materia
 
 ui.users.create.form.name=Nombre
 ui.users.create.form.name.placeholder=Nombre
@@ -81,6 +84,14 @@ ui.courses.create.form.name.placeholder=Ej: Segundo grado A
 ui.courses.create.form.manager=Encargado
 ui.courses.create.form.classroom=Salon de clases
 
+ui.subjects.create.form.name=Nombre
+ui.subjects.create.form.name.placeholder=Nombde de la materia
+ui.subjects.create.form.teacher=Educador
+ui.subjects.create.form.classroom=Salón de clase
+ui.subjects.create.form.days=Días
+ui.subjects.create.form.startTime=Hora inicio
+ui.subjects.create.form.endTime=Hora fin
+
 ui.common.button.save=Guardar
 ui.common.table.edit=Editar
 ui.common.table.action=Accion
@@ -89,6 +100,13 @@ ui.common.table.updatedAt=Actualizado en
 ui.common.button.search=Buscar
 ui.common.form.select=-- Seleccione un valor --
 ui.common.actions.edit=Editar
+ui.common.days.monday=Lunes
+ui.common.days.tuesday=Martes
+ui.common.days.wednesday=Miércoles
+ui.common.days.thursday=Jueves
+ui.common.days.friday=Viernes
+ui.common.days.saturday=Sabado
+ui.common.days.sunday=Domingo
 
 ui.users.index.table.name=Nombre
 ui.users.index.table.lastName=Apellido
@@ -99,6 +117,7 @@ ui.courses.index.table.name=Curso
 ui.courses.index.table.manager=Manager
 ui.courses.index.table.cycle=Ciclo
 ui.courses.index.table.classroom=Salón
+ui.courses.index.table.subjects=Materias
 
 ui.cycles.index.table.cycle=Ciclo
 ui.cycles.index.table.createdAt=Fecha creación
