Se agrego funcionalidad que muestra todos los datos relacionados a un curso en la misma vista. Se integro en la vista de curso enlace para agregar materias al curso que se esta mostrando. Se agrego funcionalidad para mostar lista de materias del curso en la misma pagina. Se modifico funcion crear materia para que al crear una materia envie de nuevo a la pagina de ver curso

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -11,6 +11,7 @@ ui.classrooms.edit.window.title=Editar salon de clase
 ui.courses.index.window.title=Cursos
 ui.courses.edit.window.title=Editar Curso
 ui.subjects.create.window.title=Crear Materia
+ui.courses.show.window.title=Consultar Curso
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -127,3 +128,16 @@ ui.classrooms.index.table.description=Descripción
 
 ui.pagination.previous=Anterior
 ui.pagination.next=Siguiente
+
+ui.courses.links.addManager=Asignar encargado
+ui.courses.links.addClassroom=Asignar Salón de clase
+ui.courses.links.addSubject=Agregar Materia
+
+ui.courses.show.headers.subjects=Materias del curso
+
+ui.courses.show.table.subject.name=Nombre Materia
+ui.courses.show.table.subject.classroom=Salón de clase
+ui.courses.show.table.subject.teacher=Educador
+ui.courses.show.table.subject.days=Días de clase
+ui.courses.show.table.subject.start=Hora inicio
+ui.courses.show.table.subject.end=Hora fin
