Se agrego funcionalidad para editar materias y para eliminar materias de cursos

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -12,6 +12,8 @@ ui.courses.index.window.title=Cursos
 ui.courses.edit.window.title=Editar Curso
 ui.subjects.create.window.title=Crear Materia
 ui.courses.show.window.title=Consultar Curso
+ui.subjects.edit.window.title=Editar Materia
+ui.subjects.delete.window.title=Eliminar Materia
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -41,6 +43,8 @@ ui.courses.index.panel.heading=Lista de cursos
 ui.courses.create.panel.heading=Crear Curso
 ui.courses.edit.panel.heading=Editar Curso
 ui.subjects.create.panel.heading=Agregar materia
+ui.subjects.edit.panel.heading=Editar materia
+ui.subjects.delete.panel.heading=Eliminar materia
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -52,6 +56,8 @@ ui.breadcrumb.classrooms.edit=Editar Salón
 ui.breadcrumb.courses=Lista de cursos
 ui.breadcrumb.courses.create=Crear Curso
 ui.breadcrumb.subjects.create=Agregar materia
+ui.breadcrumb.subjects.edit=Editar materia
+ui.breadcrumb.subjects.delete=Eliminar materia
 
 ui.users.create.form.name=Nombre
 ui.users.create.form.name.placeholder=Nombre
@@ -101,6 +107,7 @@ ui.common.table.updatedAt=Actualizado en
 ui.common.button.search=Buscar
 ui.common.form.select=-- Seleccione un valor --
 ui.common.actions.edit=Editar
+ui.common.actions.delete=Eliminar
 ui.common.days.monday=Lunes
 ui.common.days.tuesday=Martes
 ui.common.days.wednesday=Miércoles
