Se agrego funcionalidad marcar usurios como eliminados. Se mejoro fragment ui de paginacion. Se mejoro ui con todo lo relacionado a usuarios. Se modifico funcionalidad que devuelve lista de usuarios para que solo devuelva usuarios activos y no eliminados

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -14,6 +14,7 @@ ui.subjects.create.window.title=Crear Materia
 ui.courses.show.window.title=Consultar Curso
 ui.subjects.edit.window.title=Editar Materia
 ui.subjects.delete.window.title=Eliminar Materia
+ui.users.delete.window.title=Eliminar usuario
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -45,6 +46,7 @@ ui.courses.edit.panel.heading=Editar Curso
 ui.subjects.create.panel.heading=Agregar materia
 ui.subjects.edit.panel.heading=Editar materia
 ui.subjects.delete.panel.heading=Eliminar materia
+ui.users.delete.panel.heading=Eliminar usuario
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -58,6 +60,7 @@ ui.breadcrumb.courses.create=Crear Curso
 ui.breadcrumb.subjects.create=Agregar materia
 ui.breadcrumb.subjects.edit=Editar materia
 ui.breadcrumb.subjects.delete=Eliminar materia
+ui.breadcrumb.users.delete=Eliminar
 
 ui.users.create.form.name=Nombre
 ui.users.create.form.name.placeholder=Nombre
@@ -108,6 +111,7 @@ ui.common.button.search=Buscar
 ui.common.form.select=-- Seleccione un valor --
 ui.common.actions.edit=Editar
 ui.common.actions.delete=Eliminar
+ui.common.actions.new=Nuevo
 ui.common.days.monday=Lunes
 ui.common.days.tuesday=Martes
 ui.common.days.wednesday=Miércoles
@@ -118,8 +122,13 @@ ui.common.days.sunday=Domingo
 
 ui.users.index.table.name=Nombre
 ui.users.index.table.lastName=Apellido
+ui.users.index.table.birthday=Fecha Nac.
 ui.users.index.table.username=Uusuario
-ui.users.index.table.role=Role
+ui.users.index.table.role=Roles
+ui.users.index.table.email=Correo
+ui.users.index.table.empty=Aún no se han creado usuarios
+
+ui.users.actions.createAUser=Crear un usuario
 
 ui.courses.index.table.name=Curso
 ui.courses.index.table.manager=Manager
@@ -135,6 +144,8 @@ ui.classrooms.index.table.description=Descripción
 
 ui.pagination.previous=Anterior
 ui.pagination.next=Siguiente
+ui.pagination.pages=Páginas
+ui.pagination.total=Registros
 
 ui.courses.links.addManager=Asignar encargado
 ui.courses.links.addClassroom=Asignar Salón de clase
