mejoras en ui relacionado al mantenimiento de ciclos escolares

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -137,7 +137,9 @@ ui.courses.index.table.classroom=Salón
 ui.courses.index.table.subjects=Materias
 
 ui.cycles.index.table.cycle=Ciclo
-ui.cycles.index.table.createdAt=Fecha creación
+ui.cycles.index.table.empty=No hay ciclos escolares activos
+
+ui.cycles.actions.addCycle=Crear nuevo ciclo escolar
 
 ui.classrooms.index.table.name=Salón
 ui.classrooms.index.table.description=Descripción
