mejoras de interfaz para registrar y listar salones de clases

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -143,6 +143,9 @@ ui.cycles.actions.addCycle=Crear nuevo ciclo escolar
 
 ui.classrooms.index.table.name=Salón
 ui.classrooms.index.table.description=Descripción
+ui.classrooms.index.table.empty=No se han creado salones de clase.
+
+ui.classrooms.actions.addClassroom=Registrar salón de clase
 
 ui.pagination.previous=Anterior
 ui.pagination.next=Siguiente
