mejoras de funcionamiento e interfaz en listado y creacion de cursos dentro de un ciclo escolar

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -93,6 +93,10 @@ ui.courses.create.form.cycle=Ciclo
 ui.courses.create.form.name.placeholder=Ej: Segundo grado A
 ui.courses.create.form.manager=Encargado
 ui.courses.create.form.classroom=Salon de clases
+ui.courses.create.form.manager.nomanager=Sin encargado
+ui.courses.create.form.manager.empty=No se han registrado educadores
+ui.courses.create.form.classroom.empty=No se han registrado salones de clase
+ui.courses.create.form.classroom.noclassroom=Sin asignar
 
 ui.subjects.create.form.name=Nombre
 ui.subjects.create.form.name.placeholder=Nombde de la materia
@@ -135,6 +139,10 @@ ui.courses.index.table.manager=Manager
 ui.courses.index.table.cycle=Ciclo
 ui.courses.index.table.classroom=Salón
 ui.courses.index.table.subjects=Materias
+ui.courses.index.table.empty=No se han agregado cursos a este ciclo escolar.
+ui.courses.index.noactivecycles=No hay ciclos escolares activos
+
+ui.courses.actions.addCourse=Agregar curso
 
 ui.cycles.index.table.cycle=Ciclo
 ui.cycles.index.table.empty=No hay ciclos escolares activos
