correccion menor en interfaz

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -172,3 +172,4 @@ ui.courses.show.table.subject.teacher=Educador
 ui.courses.show.table.subject.days=Días de clase
 ui.courses.show.table.subject.start=Hora inicio
 ui.courses.show.table.subject.end=Hora fin
+ui.courses.show.table.subject.empty=No se han registrado materias a este curso.
