mejoras en ui de vista completa de un curso escolar

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -163,8 +163,10 @@ ui.pagination.total=Registros
 ui.courses.links.addManager=Asignar encargado
 ui.courses.links.addClassroom=Asignar Salón de clase
 ui.courses.links.addSubject=Agregar Materia
+ui.courses.links.addStudent=Agregar estudiante
 
 ui.courses.show.headers.subjects=Materias del curso
+ui.courses.show.headers.students=Estudiantes del curso
 
 ui.courses.show.table.subject.name=Nombre Materia
 ui.courses.show.table.subject.classroom=Salón de clase
@@ -173,3 +175,6 @@ ui.courses.show.table.subject.days=Días de clase
 ui.courses.show.table.subject.start=Hora inicio
 ui.courses.show.table.subject.end=Hora fin
 ui.courses.show.table.subject.empty=No se han registrado materias a este curso.
+
+ui.courses.show.student.table.student=Estudiante
+ui.courses.show.student.table.empty=No se han agregado estudiantes a este curso
