Se modifica modelo de datos para que cada materia pueda soportar varios horarios de clase. Se agrega la funcionalidad para agregar horarios a materias. Se agrega la funcionalidad para eliminar horarios a materias

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -16,6 +16,9 @@ ui.subjects.edit.window.title=Editar Materia
 ui.subjects.delete.window.title=Eliminar Materia
 ui.users.delete.window.title=Eliminar usuario
 ui.students.unsubscribe.window.title=Eliminar suscripción
+ui.subjects.show.window.title=Mostrar materia
+ui.schedules.create.window.title=Crear horario
+ui.schedules.delete.window.title=Eliminar horario
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -50,6 +53,9 @@ ui.subjects.delete.panel.heading=Eliminar materia
 ui.users.delete.panel.heading=Eliminar usuario
 ui.students.subscribe.panel.heading=Suscribir estudiante
 ui.students.unsubscribe.panel.heading=Eliminar Suscripción
+ui.subjects.show.panel.heading=Mostrar materia: {0}
+ui.schedules.create.panel.heading=Crear horario
+ui.schedules.delete.panel.heading=Eliminar horario
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -112,6 +118,17 @@ ui.subjects.create.form.classroom=Salón de clase
 ui.subjects.create.form.days=Días
 ui.subjects.create.form.startTime=Hora inicio
 ui.subjects.create.form.endTime=Hora fin
+ui.subjects.create.form.saveAndSchedule=Guardar y asignar horario
+
+ui.subjects.show.schedules=Horarios
+ui.schedules.create.form.dayOfWeek=Día
+ui.schedules.create.form.startTime=Hora inicio
+ui.schedules.create.form.endTime=Hora Fifin
+
+ui.subjects.show.schedule.table.day=Día
+ui.subjects.show.schedule.table.startTime=Hora inicio
+ui.subjects.show.schedule.table.endTime=Hora fin
+ui.subjects.show.schedule.table.empty=No se han registrado horarios
 
 ui.students.subscribe.form.student=Estudiante
 ui.students.subscribe.form.course=Curso
