ADD: Se agrego funcionalidad para el registro de notas por estudiante

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -20,6 +20,10 @@ ui.subjects.show.window.title=Mostrar materia
 ui.schedules.create.window.title=Crear horario
 ui.schedules.delete.window.title=Eliminar horario
 ui.schedules.show.window.title=Horario de clases
+ui.courses.delete.window.title=Eliminar Curso
+ui.grades.create.window.title=Crear cuadro de notas
+ui.grades.register.window.title=Registrar notas
+ui.grades.registerGradeToStudent.window.title=Registrar nota a estudiante
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -58,6 +62,11 @@ ui.subjects.show.panel.heading=Mostrar materia: {0}
 ui.schedules.create.panel.heading=Crear horario
 ui.schedules.delete.panel.heading=Eliminar horario
 ui.schedules.show.panel.heading=Horario de clases {0} ({1})
+ui.courses.delete.panel.heading=Eliminar curso {0} ({1})
+ui.grades.show.panel.heading=Notas {0} - {1} ({2})
+ui.grades.create.panel.heading=Registrar nuevo cuadro de notas: {0} - {1} ({2})
+ui.grades.register.panel.heading=Registrar notas: {0} - {1} - {2} ({3})
+ui.grades.registerGradeToStudent.panel.heading=Registrar nota [{0}] {1} - {2} ({3})
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -67,6 +76,7 @@ ui.breadcrumb.cycles.edit=Editar Ciclo
 ui.breadcrumb.classrooms=Salones de clase
 ui.breadcrumb.classrooms.edit=Editar Salón
 ui.breadcrumb.courses=Lista de cursos
+ui.breadcrumb.courses.delete=Eliminar curso
 ui.breadcrumb.courses.create=Crear Curso
 ui.breadcrumb.subjects.create=Agregar materia
 ui.breadcrumb.subjects.edit=Editar materia
@@ -75,6 +85,12 @@ ui.breadcrumb.users.delete=Eliminar
 ui.breadcrumb.students.subscribe=Suscribir estudiante
 ui.breadcrumb.students.unsubscribe=Eliminar suscripción
 ui.breadcrumb.classSchedule=Horario de clases
+ui.breadcrumb.grades=Notas
+ui.breadcrumb.grades.register=Registrar notas: {0}
+
+ui.grades.create.form.description=Descripción
+ui.grades.create.form.description.placeholder=Ej: Evaluación 1
+ui.grades.create.form.button.register=Registrar notas
 
 ui.students.unsubscribe.form.unsubscribe=Eliminar suscripción del estudiante {0} del curso {1}
 
@@ -128,6 +144,8 @@ ui.schedules.create.form.dayOfWeek=Día
 ui.schedules.create.form.startTime=Hora inicio
 ui.schedules.create.form.endTime=Hora Fifin
 
+ui.subjects.show.grades=Notas
+
 ui.subjects.show.schedule.table.day=Día
 ui.subjects.show.schedule.table.startTime=Hora inicio
 ui.subjects.show.schedule.table.endTime=Hora fin
@@ -138,6 +156,7 @@ ui.students.subscribe.form.course=Curso
 ui.students.subscribe.form.student.empty=No se han registrado estudiantes
 
 ui.common.button.save=Guardar
+ui.common.table.delete=Eliminar
 ui.common.table.edit=Editar
 ui.common.table.action=Accion
 ui.common.table.createdAt=Creado en
@@ -213,3 +232,20 @@ ui.courses.show.student.table.empty=No se han agregado estudiantes a este curso
 
 ui.classSchedule.startTime=Inicio
 ui.classSchedule.endTime=Fin
+
+ui.courses.delete.form.cycle=Ciclo escolar
+ui.courses.delete.form.course=Curso
+
+ui.grades.register.table.student=Estudiante
+ui.grades.register.table.grade=Nota
+ui.grades.register.table.register=Registrar nota
+ui.grades.register.table.edit=Editar nota
+
+ui.grades.registerGradeToStudent.form.cycle=Ciclo
+ui.grades.registerGradeToStudent.form.course=Curso
+ui.grades.registerGradeToStudent.form.subject=Materia
+ui.grades.registerGradeToStudent.form.student=Estudiante
+ui.grades.registerGradeToStudent.form.score=Calificación
+
+ui.grades.show.table.name=Nombre evalucación
+ui.grades.show.table.empty=Aún no se han creado evaluaciones
