FIX se correigen urls invalidas

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -24,6 +24,7 @@ ui.courses.delete.window.title=Eliminar Curso
 ui.grades.create.window.title=Crear cuadro de notas
 ui.grades.register.window.title=Registrar notas
 ui.grades.registerGradeToStudent.window.title=Registrar nota a estudiante
+ui.grades.show.window.title=Cuadros de notas
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -86,7 +87,10 @@ ui.breadcrumb.students.subscribe=Suscribir estudiante
 ui.breadcrumb.students.unsubscribe=Eliminar suscripción
 ui.breadcrumb.classSchedule=Horario de clases
 ui.breadcrumb.grades=Notas
-ui.breadcrumb.grades.register=Registrar notas: {0}
+ui.breadcrumb.grades.register=Crear cuadro de notas
+ui.breadcrumb.schedules.create=Crear horario
+ui.breadcrumb.grades.scorebook=Cuadro de notas {0}
+ui.breadcrumb.registerGradeToStudent.register=Registrar nota: {0}
 
 ui.grades.create.form.description=Descripción
 ui.grades.create.form.description.placeholder=Ej: Evaluación 1
