+Funcionalidad para editar cuadros de notas y notas asignadas a estudiants

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -25,6 +25,8 @@ ui.grades.create.window.title=Crear cuadro de notas
 ui.grades.register.window.title=Registrar notas
 ui.grades.registerGradeToStudent.window.title=Registrar nota a estudiante
 ui.grades.show.window.title=Cuadros de notas
+ui.grades.edit.window.title=Editar evaluación
+ui.grades.editScore.window.title=Editar nota
 
 ui.menu.navbar.home=Inicio
 ui.menu.navbar.users=Usuarios
@@ -68,6 +70,8 @@ ui.grades.show.panel.heading=Notas {0} - {1} ({2})
 ui.grades.create.panel.heading=Registrar nuevo cuadro de notas: {0} - {1} ({2})
 ui.grades.register.panel.heading=Registrar notas: {0} - {1} - {2} ({3})
 ui.grades.registerGradeToStudent.panel.heading=Registrar nota [{0}] {1} - {2} ({3})
+ui.grades.edit.panel.heading=Editar evaluación
+ui.grades.editScore.panel.heading=Editar Nota
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -91,6 +95,8 @@ ui.breadcrumb.grades.register=Crear cuadro de notas
 ui.breadcrumb.schedules.create=Crear horario
 ui.breadcrumb.grades.scorebook=Cuadro de notas {0}
 ui.breadcrumb.registerGradeToStudent.register=Registrar nota: {0}
+ui.breadcrumb.grades.edit=Editar evaluación
+ui.breadcrumb.editScore=Editar nota: {0}
 
 ui.grades.create.form.description=Descripción
 ui.grades.create.form.description.placeholder=Ej: Evaluación 1
@@ -253,3 +259,6 @@ ui.grades.registerGradeToStudent.form.score=Calificación
 
 ui.grades.show.table.name=Nombre evalucación
 ui.grades.show.table.empty=Aún no se han creado evaluaciones
+
+ui.grades.edit.form.description=Descripción
+ui.grades.edit.form.description.placeholder=Ejemlo: Examen 1
