custom login failure handler agregado

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -270,4 +270,5 @@ ui.login.form.password=Contraseña
 ui.login.form.login=Iniciar sesión
 
 errors.login.error=Usuario o contraseña incorrectos.
+errors.login.disabled=Usuario deshabilitado
 messages.logout=Sessión finalizada con éxito.
