Se agrego funcionalidad para mostar si un usuario esta activo. Se agrego funcionalidad para cambiar de estado actriveo/inactivo a un usuario desde la vista de edicion. Se modifico UserDetailService para que tome en cuenta el estado del usuario. Se agrego mensajes custom a la vista de login.

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -186,6 +186,7 @@ ui.common.days.saturday=Sabado
 ui.common.days.sunday=Domingo
 
 ui.users.index.table.name=Nombre
+ui.users.index.table.active=Activo
 ui.users.index.table.lastName=Apellido
 ui.users.index.table.birthday=Fecha Nac.
 ui.users.index.table.username=Uusuario
@@ -272,3 +273,6 @@ ui.login.form.login=Iniciar sesión
 errors.login.error=Usuario o contraseña incorrectos.
 errors.login.disabled=Usuario deshabilitado
 messages.logout=Sessión finalizada con éxito.
+
+ui.users.edit.form.active=Activo
+ui.users.edit.form.disabled=Deshabilitado
